# retail-profitability-pipeline

./: .env.example  .gitignore  README.md  build.py  pyproject.toml  requirements.txt  run.bat  run.sh  transform.py
app/: __init__.py  dashboard.py  llm_query.py  sql_guardrail.py
data/: warehouse.duckdb
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _marts.yml  dim_company.sql  fct_profitability.sql
dbt/models/staging/: _sources.yml  stg_fred_macro.sql  stg_sec_financials.sql
flows/: __init__.py  pipeline_flow.py
ingest/: __init__.py  config.py  fred.py  load_raw.py  sec.py
tests/: test_ingest.py  test_sql_guardrail.py
