[project]
name = "retail-profitability-pipeline"
version = "1.0.0"
description = "End-to-end analytics pipeline: SEC EDGAR + FRED -> DuckDB -> SQL models -> Streamlit, with an optional NL->SQL layer."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "streamlit>=1.36",
    "plotly>=5.22",
    "python-dotenv>=1.0",
    "anthropic>=0.39",
    "tabulate>=0.9",
]

[project.optional-dependencies]
# dbt does not yet support Python 3.14. On Python <=3.13 you can install these
# and run the models with real dbt (`dbt build`) instead of build.py.
dbt = ["dbt-core>=1.8", "dbt-duckdb>=1.8"]
orchestration = ["prefect>=3.0"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest", "app", "flows"]
